err.txt
Traceback (most recent call last):
  File "C:\Users\jamal\AppData\Local\Programs\Python\Python313\Lib\py_compile.py", line 144, in compile
    code = loader.source_to_code(source_bytes, dfile or file,
                                 _optimize=optimize)
  File "<frozen importlib._bootstrap_external>", line 1090, in source_to_code
  File "<frozen importlib._bootstrap>", line 488, in _call_with_frames_removed
  File "hms/views.py", line 1266
    @role_required(allowed_categories=[\'EXECUTIVE\', \'STUDENT_SERVICES\'])
                                        ^
SyntaxError: unexpected character after line continuation character

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "C:\Users\jamal\OneDrive\Desktop\Student-Welfare-Management-System\check_views.py", line 5, in <module>
    py_compile.compile('hms/views.py', doraise=True)
    ~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\jamal\AppData\Local\Programs\Python\Python313\Lib\py_compile.py", line 150, in compile
    raise py_exc
py_compile.PyCompileError:   File "hms/views.py", line 1266
    @role_required(allowed_categories=[\'EXECUTIVE\', \'STUDENT_SERVICES\'])
                                        ^
SyntaxError: unexpected character after line continuation character

